fix: improve line spacing

--- a/themes/idgaf/assets/css/main.css
+++ b/themes/idgaf/assets/css/main.css
@@ -4,6 +4,10 @@
   }
 }
 
+p,li,table {
+  line-height: 1.3;
+}
+
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   display: flex;
@@ -61,6 +65,7 @@ hr {
 ul,
 ol {
   padding-left: 2rem;
+  margin: 0.3rem 0;
 }
 
 #MAIN_NAV ul {
